--- a/WeatherApp/Resource/en.lproj/Localizable.strings
+++ b/WeatherApp/Resource/en.lproj/Localizable.strings
@@ -15,3 +15,7 @@
 "distance" = "Distance";
 "search_by_name" = "Search by Name";
 "tab_weatherMap" = "Map";
+"no_data_found" = "No data found!";
+"pls_add_cities" = "Please add cities as favourites.";
+"book_marks" = "Bookmarks";
+
