--- a/WeatherApp/Resource/en.lproj/Localizable.strings
+++ b/WeatherApp/Resource/en.lproj/Localizable.strings
@@ -18,4 +18,5 @@
 "no_data_found" = "No data found!";
 "pls_add_cities" = "Please add cities as favourites.";
 "book_marks" = "Bookmarks";
+"about" = "About";
 
